Thu Apr 16 17:09:43 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/calibrate/Calibrate_App.h:
        * cuts/utils/calibrate/Calibrate_App.cpp:

          . Added --help command-line option.

Thu Apr 16 17:00:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/calibrate/Calibrate_App.h:
        * cuts/utils/calibrate/Calibrate_App.inl:
        * cuts/utils/calibrate/Calibrate_App.cpp:
        * cuts/utils/calibrate/Calibrate_Options.h:
        * cuts/utils/calibrate/calibrate.cpp:
        * cuts/utils/calibrate/calibrate.mpc:

          . Re-designed the application so that uses a C++ application
            object instead of C functions.

Wed Apr 15 06:18:21 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/models/CAPI.xme:
        * MDE/GME/paradigms/PICML/models/XMLSchema.xme:
        * MDE/GME/paradigms/PICML/models/examples/capi/AnyEvent.xme:

          . Upgraded models to latest version of PICML.

        * install/CUTS_CoSMIC.wxs:
        * install/CUTS_CoSMIC_installers.mpc:
        * install/CUTS_PICML.wxs:

          . Included example models in installer.

          . The installer updates all GME models, if necessary, as part
            of the build process.

Wed Apr 15 03:56:23 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/unite/Unite_App.cpp:

          . Bug fix where the application crashed if the configuration
            did not contain any services.

Tue Apr 14 23:07:42 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Generator_T.cpp:

          . Removed dead code.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Ctx.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Ctx.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Event_Impl_Generator.cpp: